--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -13,5 +13,6 @@
 @import "email-host-modal";
 @import "host-management";
 @import "user-management";
+@import "message-board";
 
 // @import "popup";
