--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -44,7 +44,8 @@
 		}
 	}
 }
-ul#post-topics {
+ul#post-topics,
+ul#post-topics-empty {
 	display: flex;
 	flex-direction: column;
 	li {
@@ -65,7 +66,32 @@ ul#post-topics {
 		.mbform {
 			display: flex;
 			align-self: flex-end;
+			align-items: center;
 		}
+	}
+}
+ul#post-topics.pt-empty {
+	li {
+		border-bottom: none;
+	}
+}
+.group-mb {
+	display: flex;
+	align-self: flex-end;
+	align-items: center;
+}
+a.manage-delete-mb {
+	cursor: pointer;
+	 color: rgba(255,255,255,1);
+  margin-left: 1em;
+  transition: all 0.2s ease;
+  &:hover {
+    color: rgba(255,38,0,1);
+  }
+}
+@media screen and (max-width: 800px) {
+	a.manage-delete-mb {
+		margin-left: 1.6em;
 	}
 }
 ul#replies {
@@ -73,11 +99,17 @@ ul#replies {
 	flex-direction: column;
 	margin-left: 1.5em;
 	li {
+		position: relative;
 		border-left: 1px dashed rgba(255,255,255,0.4);
 		background-color: rgba(0,0,0,0.6);
 		padding: 1em;
 		margin-bottom: 4px;
 	}
+}
+.delete-reply {
+	position: absolute;
+	top: 0.5em;
+	right: 0.5em;
 }
 .post-content {
 	display: flex;
@@ -144,7 +176,7 @@ p.mb-date {
 .gtp {
 	cursor: pointer;
 	text-decoration: none;
-	margin-top: 1em;
+	// margin-top: 1em;
 	font-size: 0.8em;
 	padding: 0.5em 1em;
 	background-color: rgba(255,255,255,0.1);
