--- a/style-expanded.css
+++ b/style-expanded.css
@@ -3430,7 +3430,7 @@ form#manage-mtg label.pdf-label {
   background-color: #841616;
 }
 
-@media screen and (max-width: 975px) {
+@media screen and (max-width: 1050px) {
   div.tooltip.right .tooltiptext {
     margin-left: -135px;
   }
@@ -4622,13 +4622,15 @@ li.focus a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-ul#post-topics {
+ul#post-topics,
+ul#post-topics-empty {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column;
 }
-ul#post-topics li {
+ul#post-topics li,
+ul#post-topics-empty li {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -4641,20 +4643,54 @@ ul#post-topics li {
   border-bottom: 1px dashed rgba(255, 255, 255, 0.4);
 }
 ul#post-topics li p.title,
-ul#post-topics li p.body {
+ul#post-topics li p.body,
+ul#post-topics-empty li p.title,
+ul#post-topics-empty li p.body {
   display: -ms-flexbox;
   display: flex;
 }
-ul#post-topics li p.title {
+ul#post-topics li p.title,
+ul#post-topics-empty li p.title {
   font-size: 1.2em;
 }
-ul#post-topics li .mbform {
+ul#post-topics li .mbform,
+ul#post-topics-empty li .mbform {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-item-align: end;
       align-self: flex-end;
+  -ms-flex-align: center;
+      align-items: center;
 }
 
+ul#post-topics.pt-empty li {
+  border-bottom: none;
+}
+
+.group-mb {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+a.manage-delete-mb {
+  cursor: pointer;
+  color: white;
+  margin-left: 1em;
+  transition: all 0.2s ease;
+}
+a.manage-delete-mb:hover {
+  color: #ff2600;
+}
+
+@media screen and (max-width: 800px) {
+  a.manage-delete-mb {
+    margin-left: 1.6em;
+  }
+}
 ul#replies {
   display: -ms-flexbox;
   display: flex;
@@ -4663,10 +4699,17 @@ ul#replies {
   margin-left: 1.5em;
 }
 ul#replies li {
+  position: relative;
   border-left: 1px dashed rgba(255, 255, 255, 0.4);
   background-color: rgba(0, 0, 0, 0.6);
   padding: 1em;
   margin-bottom: 4px;
+}
+
+.delete-reply {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
 }
 
 .post-content {
@@ -4748,7 +4791,6 @@ p.mb-date {
 .gtp {
   cursor: pointer;
   text-decoration: none;
-  margin-top: 1em;
   font-size: 0.8em;
   padding: 0.5em 1em;
   background-color: rgba(255, 255, 255, 0.1);
