--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -45,6 +45,7 @@
 	}
 }
 ul#post-topics,
+ul#post-topicsz,
 ul#post-topics-empty {
 	display: flex;
 	flex-direction: column;
@@ -62,6 +63,14 @@ ul#post-topics-empty {
 		}
 		p.title {
 			font-size: 1.2em;
+			display: flex;
+			align-items: center;
+			span.num-replies {
+				font-size: 0.7em;
+				margin-left: 1em;
+				font-weight: normal;
+				color: rgba(255,255,255,0.6);
+			}
 		}
 		.mbform {
 			display: flex;
@@ -106,6 +115,7 @@ ul#replies {
 		margin-bottom: 4px;
 	}
 }
+
 .delete-reply {
 	position: absolute;
 	top: 0.5em;
@@ -189,7 +199,17 @@ p.mb-date {
 .mb-reply {
 	display: flex;
 	margin-left: 1.5em;
-
+}
+@media screen and (max-width: 700px) {
+	ul#replies {
+		margin-left: 0;
+	}
+	.mb-reply {
+		margin-left: 0;
+	}
+	#post-reply #reply {
+		width: 100%;
+	}
 }
 .gtp.res {
 	width: 100%;
