--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -56,7 +56,10 @@ ul#post-topics-empty {
 		width: 100%;
 		line-height: 1.5em;
 		padding: 1em;
-		border-bottom: 1px dashed rgba(255,255,255,0.4);
+		// border-bottom: 1px dashed rgba(255,255,255,0.4);
+		border-bottom: 1px solid #22677a;
+		box-shadow: 0px 1px #ac8e33;
+
 		p.title,
 		p.body {
 			display: flex;
@@ -74,8 +77,8 @@ ul#post-topics-empty {
 		}
 		.mbform {
 			display: flex;
-			align-self: flex-end;
 			align-items: center;
+
 		}
 	}
 }
@@ -84,25 +87,47 @@ ul#post-topics.pt-empty {
 		border-bottom: none;
 	}
 }
-.group-mb {
+a.mb-entire {
+	text-decoration: none;
+	padding: 0.5em;
+	color: #fff;
+	transition: all 0.2s ease;
+	&:hover {
+		background-color: rgba(255,255,255,0.3);
+	}
+}
+.mb-individual {
 	display: flex;
-	align-self: flex-end;
+	width: 100%;
+	flex-wrap: wrap;
 	align-items: center;
+	justify-content: space-between;
+	// border-bottom: 1px dotted rgba(255,255,255,0.2);
+	// background-color: rgba(255,255,255,0.2);
+	// margin-bottom: 0.5em;
+	// position: relative;
+}
+.group-mb {
+	// position: absolute;
+	// right: 0;
+	// background-color: rgba(255,255,255,0.4);
+	display: flex;
+	// align-self: flex-end;
+	align-items: center;
+	flex: 0;
+	// padding: 0em 1em 0em 0em;
 }
 a.manage-delete-mb {
 	cursor: pointer;
-	 color: rgba(255,255,255,1);
-  margin-left: 1em;
+	color: rgba(255,255,255,1);
+  // margin-left: 1em;
+  padding: 0em 0.5em;
   transition: all 0.2s ease;
   &:hover {
     color: rgba(255,38,0,1);
   }
 }
-@media screen and (max-width: 800px) {
-	a.manage-delete-mb {
-		margin-left: 1.6em;
-	}
-}
+
 ul#replies {
 	display: flex;
 	flex-direction: column;
@@ -147,10 +172,11 @@ ul#replies {
 		font-size: 1em;
 		line-height: 1.25em;
 		padding: 0.5em;
+		border-top-right-radius: 8px;
 		border-bottom-right-radius: 8px;
 		border-bottom-left-radius: 8px;
 		&::placeholder {
-			color: #404040;
+			color: #707070;
 		}
 	}
 	#reply {
@@ -169,15 +195,93 @@ ul#replies {
 		}
 	}
 }
+.post-visitor {
+	margin-left: 1.5em;
+	padding: 1em;
+	background-color: rgba(210,210,210,0.8);
+	color: #181818; 
+	border-bottom-right-radius: 8px;
+	border-bottom-left-radius: 8px;
+}
+.login-links {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	justify-content: space-around;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	a {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-decoration: none;
+		width: 40%;
+		padding: 0.5em 1em;
+		background-color: rgba(255,255,255,0.9);
+		color: #313131;
+		text-align: center;
+		box-shadow: 0px 18px 6px -6px rgba(0,0,0,0.5);
+		transition: all 0.2s ease;
+		&:hover {
+			background-color: rgba(0,0,0,0.3);
+			color: #fff;
+		}
+	}
+}
 p.mb-body {
 	margin-top: 0.8em;
 	margin-left: 1em;
+}
+p.npy,
+p.nry {
+	margin: 0;
 }	
-p.mb-date {
-	width: 100%;
+
+a.mb-date {
+	max-width: 80%;
 	font-size: 0.8em;
-	// margin-bottom: 1.5em;
-	color: rgba(255,255,255,0.6);	
+	text-decoration: none;
+	color: rgba(255,255,255,0.6);
+	flex: 2;
+	// background-color: rgba(255,255,255,0.2);
+	padding: 0.25em 0.5em;
+	// margin-bottom: 0.25em;
+	transition: all 0.2s ease;
+	border-bottom: 1px dotted rgba(255,255,255,0.2);
+	// &:hover {
+	// 	background-color: rgba(255,255,255,0.6);
+	// 	color: #4d4d4d;
+	// }	
+}
+p.mp-date {
+	width: 100%;
+	max-width: 90%;
+	font-size: 0.8em;
+	color: rgba(255,255,255,0.6);
+	background-color: rgba(255,255,255,0.2);
+	padding: 0.25em 0.5em;
+	margin-bottom: 0.25em;	
+}
+@media screen and (max-width: 600px) {
+	.mb-individual {
+		flex-direction: column;
+		background-color: transparent;
+		.mb-date {
+			width: 100%;
+			max-width: 100%;
+			background-color: rgba(255,255,255,0.2);
+			color: rgba(255,255,255,0.6);
+			margin-bottom: 0.5em;
+		}
+		.group-mb {
+			width: 100%;
+			justify-content: flex-end;
+		}
+		.gtp,
+		a.manage-delete-mb {
+			padding: 0em 1.25em;
+		}
+	}
 }
 #theModal .modal-body #mb-title.alert, 
 #theModal .modal-body #emh-msg.alert {
@@ -187,14 +291,63 @@ p.mb-date {
 	cursor: pointer;
 	text-decoration: none;
 	// margin-top: 1em;
-	font-size: 0.8em;
-	padding: 0.5em 1em;
-	background-color: rgba(255,255,255,0.1);
+	// font-size: 0.8em;
+	// padding: 0.5em 1em;
+	color: #fff;
+	// margin-left: 1em;
+	// background-color: rgba(255,255,255,0.1);
+	padding: 0em 0.5em;
 	transition: all 0.2s ease;
 	&:hover {
-		background-color: rgba(255,255,255,0.6);
-		color: #313131;
+		// background-color: rgba(255,255,255,0.6);
+		color: #96ff00;
 	}
+}
+.post-a-reply {
+	cursor: pointer;
+	// width: 100%;
+	width: 60%;
+	text-decoration: none;
+	margin-top: 1em;
+  margin-left: 0;
+  padding: 1em;
+  text-align: center;
+	color: #fff;
+	// margin-left: 1em;
+	background-color: #61c068;
+	border-top-right-radius: 0px;
+	border-top-left-radius: 0px;
+	transition: all 0.2s ease;
+	&:hover {
+		background-color: #12961c;
+		color: #fff;
+	}
+	&.active {
+		background: none;
+		border-top-right-radius: 8px;
+		border-top-left-radius: 8px;		
+		margin-left: 0;
+		border-top: none;
+		border-bottom: none;
+		background-color: rgba(0,0,0,0.6);
+		transition: all 0.2s ease; 
+		&:hover {
+			background-color: #000;
+			color: #fff;
+		}
+	}	
+}
+.post-error {
+	// display: none;
+	padding: 20px;
+	// width: 100%;
+	display: flex;
+	margin-left: 1.5em;
+	background-color: #ffc6c6;
+	color: #c72222;
+	line-height: 1.5em;
+	border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 .mb-reply {
 	display: flex;
@@ -204,7 +357,21 @@ p.mb-date {
 	ul#replies {
 		margin-left: 0;
 	}
-	.mb-reply {
+	.post-a-reply {
+		width: 100%;
+	}
+	#post-reply textarea {
+		border-top-right-radius: 0px;
+	}
+	.post-error {
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
+	}
+	.post-error {
+		margin-left: 0;
+	}
+	.mb-reply,
+	.post-visitor {
 		margin-left: 0;
 	}
 	#post-reply #reply {
