--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -24,6 +24,7 @@
 		margin-top: 0.5em;
 		position: sticky;
 		top: 5px;
+		z-index: 50;
 		a {
 			cursor: pointer;
 			padding: 0.5em 1em;
@@ -81,6 +82,9 @@ ul#post-topics-empty {
 
 		}
 	}
+}
+.mp-title {
+	font-size: 1.5em;
 }
 ul#post-topics.pt-empty {
 	li {
@@ -388,4 +392,18 @@ p.mp-date {
 .gtp.res.active {
 	color: #fff;
 	border-top: 1px solid #fff;
+}
+a.admin-mb-info,
+a.admin-mp-info,
+p.admin-mp-info,
+p.admin-mb-info {
+	// display: flex;
+	// width: 100%;
+	font-size: 0.8em;
+	color: rgba(255,255,255,0.6);
+	padding: 0em 0.5em;
+}
+a.admin-mp-info {
+	margin-top: -0.5em;
+	margin-bottom: 1em;
 }
