--- a/components/sass/_footer.scss
+++ b/components/sass/_footer.scss
@@ -28,12 +28,12 @@ footer {
     // width: 100%;
     color: #fff;
     text-decoration: none;
-    padding: 8px 18px;
+    padding: 1em;
     border-radius: 5px;
     background-color: inherit;
     border: 1px solid transparent;
     width: 96%;
-    max-width: 600px;
+    max-width: 500px;
     transition: all 0.3s ease;
     margin: 0 auto;
       &:hover {
