--- a/components/sass/_message-board.scss
+++ b/components/sass/_message-board.scss
@@ -5,7 +5,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-
 	h1 {
 		font-size: 2em;
 		font-weight: bold;
@@ -45,6 +44,39 @@
 		}
 	}
 }
+.post-deleted {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100vh;
+	.pd-msg {
+		width: 98%;
+		max-width: 600px;
+		h2 {
+			width: 100%;
+			padding: 0.5em;
+			color: #fff;
+			background-color: rgba(0,0,0,0.8);
+			font-size: 1em;
+			margin: 0;
+		}
+		p {
+			width: 100%;
+			background-color: rgba(255,255,255,0.2);
+			color: #fff;
+			padding: 1em;
+			margin: 0;
+			line-height: 1.5em;
+		}
+		.login-links {
+			background-color: rgba(255,255,255,0.2);
+			margin: 0;
+			padding: 0em 0em 2em;
+		}
+	}
+}
 ul#post-topics,
 ul#post-topicsz,
 ul#post-topics-empty {
@@ -57,18 +89,19 @@ ul#post-topics-empty {
 		width: 100%;
 		line-height: 1.5em;
 		padding: 1em;
-		// border-bottom: 1px dashed rgba(255,255,255,0.4);
-		border-bottom: 1px solid #22677a;
-		box-shadow: 0px 1px #ac8e33;
-
+		border-bottom: 1px solid #40c2e5;
+		box-shadow: 0px 1px #e0b943;
+		background-color: rgba(0,0,0,0.3);
+		margin-bottom: 1em;
 		p.title,
 		p.body {
 			display: flex;
 		}
 		p.title {
-			font-size: 1.2em;
+			font-size: 1.5em;
 			display: flex;
 			align-items: center;
+			font-family: Times New Roman, serif;
 			span.num-replies {
 				font-size: 0.7em;
 				margin-left: 1em;
@@ -82,9 +115,14 @@ ul#post-topics-empty {
 
 		}
 	}
+	li:first-of-type {
+		margin-top: 1em;
+	}
 }
 .mp-title {
 	font-size: 1.5em;
+	margin-top: 0.25em;
+	font-family: Times New Roman, serif;
 }
 ul#post-topics.pt-empty {
 	li {
@@ -125,7 +163,8 @@ a.manage-delete-mb {
 	cursor: pointer;
 	color: rgba(255,255,255,1);
   // margin-left: 1em;
-  padding: 0em 0.5em;
+  padding: 0em 0.75em;
+  // margin-left: 0.5em;
   transition: all 0.2s ease;
   &:hover {
     color: rgba(255,38,0,1);
@@ -144,7 +183,16 @@ ul#replies {
 		margin-bottom: 4px;
 	}
 }
-
+.pt-wrap {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+#delete-post {
+	display: flex;
+	justify-content: flex-end;
+	// margin-right: 1em;
+}
 .delete-reply {
 	position: absolute;
 	top: 0.5em;
@@ -235,6 +283,10 @@ ul#replies {
 p.mb-body {
 	margin-top: 0.8em;
 	margin-left: 1em;
+	padding-bottom: 1em;
+}
+a.mb-entire p.mb-body {
+	padding-bottom: 0em;
 }
 p.npy,
 p.nry {
@@ -251,7 +303,7 @@ a.mb-date {
 	padding: 0.25em 0.5em;
 	// margin-bottom: 0.25em;
 	transition: all 0.2s ease;
-	border-bottom: 1px dotted rgba(255,255,255,0.2);
+	border-bottom: 1px solid rgba(255,255,255,0.3);
 	// &:hover {
 	// 	background-color: rgba(255,255,255,0.6);
 	// 	color: #4d4d4d;
@@ -300,12 +352,20 @@ p.mp-date {
 	color: #fff;
 	// margin-left: 1em;
 	// background-color: rgba(255,255,255,0.1);
-	padding: 0em 0.5em;
+	padding: 0em 0.75em;
+	// margin-left: 0.5em;
 	transition: all 0.2s ease;
 	&:hover {
 		// background-color: rgba(255,255,255,0.6);
 		color: #96ff00;
 	}
+}
+.gtp.my-stuff {
+	color: #757575;
+  transition: all 0.2s ease;
+  // margin-left: 1em;
+  text-decoration: none;
+  cursor: default;
 }
 .post-a-reply {
 	cursor: pointer;
