--- a/components/sass/_msg-one.scss
+++ b/components/sass/_msg-one.scss
@@ -24,6 +24,13 @@ a#toggle-role-key {
     color: #fff;
   }
 }
+@media screen and (max-width: 700px) {
+  a#toggle-role-key {
+    &:hover {
+      color: rgba(255,255,255,0.4);
+    }
+  }
+}
 a#gmaps {
   color: #fff;
   text-decoration: underline;
@@ -38,11 +45,9 @@ a#gmaps {
 #desc-loc,
 #pdf-upload,
 #link-label,
-#role-key {
+#role-key,
+#why-join {
   cursor: pointer;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
   position: relative;
   width: 100%;
   height: 100%;
