--- a/style-expanded.css
+++ b/style-expanded.css
@@ -4800,15 +4800,16 @@ ul#post-topics-empty li p.title {
   display: flex;
   -ms-flex-align: center;
       align-items: center;
-  font-family: Times New Roman, serif;
+  font-family: 'Cinzel', Times New Roman, serif;
 }
 ul#post-topics li p.title span.num-replies,
 ul#post-topicsz li p.title span.num-replies,
 ul#post-topics-empty li p.title span.num-replies {
-  font-size: 0.7em;
+  font-size: 0.5em;
   margin-left: 1em;
   font-weight: normal;
   color: rgba(255, 255, 255, 0.6);
+  font-family: Tahoma, Calbri, sans-serif;
 }
 ul#post-topics li .mbform,
 ul#post-topicsz li .mbform,
@@ -4827,7 +4828,7 @@ ul#post-topics-empty li:first-of-type {
 .mp-title {
   font-size: 1.5em;
   margin-top: 0.25em;
-  font-family: Times New Roman, serif;
+  font-family: 'Cinzel', Times New Roman, serif;
 }
 
 ul#post-topics.pt-empty li {
